@@ -45,22 +45,14 @@ CONTAINS
     TYPE :: wavfun_list
        INTEGER :: occ,eup,edwn, nquant, lquant
        CHARACTER(len=2) :: label
-#ifdef __STD_F95
-       REAL(dp), POINTER :: wavefunc(:)
-#else
        REAL(dp), ALLOCATABLE :: wavefunc(:)
-#endif
        TYPE (wavfun_list), POINTER :: p
 
     END TYPE wavfun_list
 
     TYPE :: channel_list
        INTEGER :: lquant
-#ifdef __STD_F95
-       REAL(dp), POINTER :: channel(:)
-#else
        REAL(dp), ALLOCATABLE :: channel(:)
-#endif
        TYPE (channel_list), POINTER :: p
 
     END TYPE channel_list
@@ -304,11 +296,7 @@ CONTAINS
                 CYCLE
              ENDIF
           ENDIF
-#ifdef __STD_F95
-          IF ( associated(mtail%wavefunc) ) THEN
-#else
-             IF ( allocated(mtail%wavefunc) ) THEN
-#endif
+            IF ( allocated(mtail%wavefunc) ) THEN
                 ALLOCATE(mtail%p)
                 mtail=>mtail%p
                 NULLIFY(mtail%p)
